--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <header>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </header>
 <body style="background-color:#000000; text-align:center">
 
