--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <header>
-  <link rel="stylesheet" type="text/css" href="https://github.com/AlcibiadeR/portfolio/style.css">
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style">
 </header>
 <body style="background-color:#000000; text-align:center">
 
