--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
-<body style="background-color:#000000; text-align:center">
+<body style="text-align:center">
 
 <h1>La digitale</h1>
 
@@ -13,6 +13,7 @@
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale></a></h2>
   <div class="gen">
   <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Richiedi un preventivo</a></div>
+  <background: url(https://github.com/AlcibiadeR/portfolio/blob/100dcb9cb4bec1f1c4d09a7a272a2f21e8b4e153/sfondo%20sito-02.svg); background-position:right-bottom; max-width:30%)
   </body>
   
 
