--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale></a></h2>
   <div class="gen">
   <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Richiedi un preventivo</a></div>
-  <background: url(https://github.com/AlcibiadeR/portfolio/blob/100dcb9cb4bec1f1c4d09a7a272a2f21e8b4e153/sfondo%20sito-02.svg); background-position:right-bottom; max-width:30%)>
+  #sfondo2{background: url(https://github.com/AlcibiadeR/portfolio/blob/100dcb9cb4bec1f1c4d09a7a272a2f21e8b4e153/sfondo%20sito-02.svg); background-position:right-bottom; max-width:30%)}
   </body>
   
 
