--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
 <body style="text-align:center">
+  <div style="background: url(https://github.com/AlcibiadeR/portfolio/blob/100dcb9cb4bec1f1c4d09a7a272a2f21e8b4e153/sfondo%20sito-02.svg); background-position:right-bottom; max-width:30%)">
 
 <h1>La digitale</h1>
 
@@ -13,7 +14,7 @@
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale></a></h2>
   <div class="gen">
   <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Richiedi un preventivo</a></div>
-  #sfondo2{background: url(https://github.com/AlcibiadeR/portfolio/blob/100dcb9cb4bec1f1c4d09a7a272a2f21e8b4e153/sfondo%20sito-02.svg); background-position:right-bottom; max-width:30%)}
+  </div>
   </body>
   
 
