--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
 <body style="text-align:center">
-  <div style="background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position:right-bottom; max-width:30%)">
+  <div style="background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position:right-bottom; backgroud-repet:no-repeat; max-width:30%)">
 
 <h1>La digitale</h1>
 
