--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
-<body style="text-align:center">
-  <div style="background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position: bottom; background-repeat:no-repeat)">
+<body style="text-align:center;background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position: bottom; background-repeat:no-repeat)">
+  <div>
 
 <h1>La digitale</h1>
 
