--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
-<body style="text-align:center; background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position: bottom; background-repeat:no-repeat)">
+<body style="text-align:center; background: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg) url (https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); background-position: top, bottom; background-repeat:no-repeat, no-repeat)">
   <div>
 
 <h1>La digitale</h1>
