--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
-<body style="text-align:center;>
+<body style="text-align:center;">
              <style>
              background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url (https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
              background-position: top, bottom; 
-             background-repeat: no-repeat, no-repeat)"</style>
+             background-repeat: no-repeat, no-repeat)</style>
   <div>
 
 <h1>La digitale</h1>
