--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <style>
              #sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
              background-position: top, bottom; 
-               background-repeat: no-repeat, no-repeat)}</style>
+             background-image-repeat: no-repeat, no-repeat)}</style>
 <body style="text-align:center;" id="sfondo">
            
   <div>
