--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 </header>
   <style>
              #sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
-             background-position: top, bottom; 
+             background-position: left top, right bottom; 
              background-repeat: no-repeat, no-repeat)}</style>
 <body style="text-align:center;" id="sfondo">
            
