--- a/home.html
+++ b/home.html
@@ -2,9 +2,9 @@
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
 </header>
   <style>
-             .sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
+             #sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
              background-position: left top, right bottom; 
-             background-repeat: no-repeat, no-repeat)}</style>
+             background-repeat: no-repeat, no-repeat}</style>
 <body style="text-align:center;" id="sfondo">
            
   <div>
