--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@
   <style>
              .sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
              background-position: left top, right bottom; 
-             background-repeat: no-repeat, no-repeat}</style>
+             background-repeat: no-repeat, no-repeat;
+             background-size: 120%}</style>
 <body style="text-align:center;" class="sfondo">
            
   <div>
