--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
            
   <div>
 
-<h1>La digitale</h1>
+<h1>Portfolio<br/><span style="font-size:20px">Rachele Elena Pilia</h1>
 
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Sevizi</a><h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Chi sono</a></h2>
