--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </header>
 
 <body style="text-align:center;" class="sfondo">
