--- a/home.html
+++ b/home.html
@@ -9,14 +9,11 @@
 
 <h1>Portfolio<br/><span style="font-size:20px">Rachele Elena Pilia</h1>
 
-<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Sevizi</a><h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Chi sono</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Portfolio</a></h2>
-<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Blog</a></h2>
-<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale></a></h2>
-<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale></a></h2>
+<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Social</a></h2>
   <div class="gen">
-  <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Richiedi un preventivo</a></div>
+  <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Contattami</a></div>
   </div>
   </body>
   
