Update and rename Chi sono to Chi sono.html

--- a/Chi sono.html
+++ b/Chi sono.html
@@ -1,4 +1,11 @@
+<header>
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+</header>
+
+<body class="sfondo">
 <h1>Chi sono</h1>
 <div style="max-widht: 300px; margin:auto>
 <p>Liceo classico, laurea in lettere moderne... Era l'inizio di un percorso lineare che si è improvvisamente arrestato quando la mi attenzione è stata catturata dalla comunicazione online</p>
 <p>Mi ha affiscinato finda subito las ua volubilità e la potenza di questo nuovo media</p>
+</body
