--- a/chi_sono.html
+++ b/chi_sono.html
@@ -8,4 +8,5 @@
 <div style="max-widht: 300px; margin:auto>
 <p>Liceo classico, laurea in lettere moderne... Era l'inizio di un percorso lineare che si è improvvisamente arrestato quando la mi attenzione è stata catturata dalla comunicazione online</p>
 <p>Mi ha affiscinato finda subito las ua volubilità e la potenza di questo nuovo media</p>
+            </div>
             </body>
