--- a/home.html
+++ b/home.html
@@ -12,9 +12,7 @@
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Chi sono</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Portfolio</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Social</a></h2>
-  <div class="gen">
-  <a class="button" href='https://it.wikipedia.org/wiki/Pagina_principale'>Contattami</a></div>
-  </div>
+<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Contattami</a></h2></div>
   </body>
   
 
