--- a/chi_sono.html
+++ b/chi_sono.html
@@ -6,6 +6,7 @@
 <body class="sfondo">
 <h1>Chi sono</h1>
 <div style="max-width: 400px; margin:auto">
-<p>Liceo classico, laurea in lettere moderne... Era l'inizio di un percorso lineare che si è improvvisamente arrestato quando la mi attenzione è stata catturata dalla comunicazione online.</p>
+<p>Liceo classico, laurea in lettere moderne... Era l'inizio di un percorso lineare che si è improvvisamente arrestato quando la mi attenzione è stata catturata dalla comunicazione online: o meglio, io la continuità ce la vedo, perché in fin dei conti la letteratura è una forma di comunicazione... Ma questa è un'altra storia.</p>
+  <p>Sicuramente dal mio percorso di studi mi porto dietro molte cose: una consapevolezza linguistica, dell'importanza della forma che ha lo stesso valore del contenuto e anche una sensibilità per la scrittura che mi accompagna da sempre.</p>
             </div>
             </body>
