--- a/chi_sono.html
+++ b/chi_sono.html
@@ -7,6 +7,8 @@
 <h1>Chi sono</h1>
 <div style="max-width: 400px; margin:auto">
 <p>Liceo classico, laurea in lettere moderne... Era l'inizio di un percorso lineare che si è improvvisamente arrestato quando la mi attenzione è stata catturata dalla comunicazione online: o meglio, io la continuità ce la vedo, perché in fin dei conti la letteratura è una forma di comunicazione... Ma questa è un'altra storia.</p>
-  <p>Sicuramente dal mio percorso di studi mi porto dietro molte cose: una consapevolezza linguistica, dell'importanza della forma che ha lo stesso valore del contenuto e anche una sensibilità per la scrittura che mi accompagna da sempre.</p>
-            </div>
+  <p>Sicuramente dal mio percorso di studi mi porto dietro molte cose: una consapevolezza linguistica, dell'importanza della forma che ha lo stesso valore del contenuto e anche una sensibilità per la scrittura, che mi accompagna da sempre.</p>
+  <p>Terminata la laurea triennale ho così cominciato il percorso in digital marketing su Start2Impact. Dopo qualche mese ho trovato lavoro nel reparto marketing della Leonori.spa, presso cui mi occupo principalmente di grafica e contenuti per il sito web. Fin da subito la costruzione dei siti era qualcosa che m'ispirava particolare simpatia, perché trovo molto stimolante indagare, capire e restituire ciò che le persone cercano: qualità e chiarezza, per capire meglio come direzionare le proprie scelte come consumatori.</p>
+  <p>Stesso valeva per la grafica, che mi permetteva si sviluppare la mia passione mai coltivata per il disegno e il mio gusto nell'estetica visuale. E così ho deciso di continuare il mio percorso su Start2Impact nel settore del UX/UI Design.</p>
+  <p>Ed eccomi qua, sul mio primo sito interamente sviluppato da me: il mio portfolio di grafica</p></div>
             </body>
