--- a/nav.html
+++ b/nav.html
@@ -3,8 +3,12 @@
   
   
 </style>
-<div style="background-color:;
-    >
+<div style="background-color:#2f65b2; color: #ffffff">
  <nav>
-  
+  <ul>
+   <li>Chi sono</li>
+   <li>Portfolio</li>
+   <li>Contattami</li>
+  </ul>
   </nav>
+ </div>
