--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,12 @@
 <style>
- 
-  
+ .nav.li{list-style: none;
+  padding: 0;
+  margin: 0;}
   
 </style>
 <div style="background-color:#2f65b2; color: #ffffff">
  <nav>
-  <ul>
+  <ul class="nav.li">
    <li>Chi sono</li>
    <li>Portfolio</li>
    <li>Contattami</li>
