--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <style>
  ul.nav-li{list-style: none;
-  padding: 0;
-  margin: 0;}
+  padding: 10px;
+  display:inline}
   
 </style>
 <div style="background-color:#2f65b2; color: #ffffff">
