--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,6 @@
 <style>
- ul.nav-li{list-style: none;
-  padding: 10px;
-  display:inline}
+ ul.nav-li{list-style: none;}
+ il.nav-li{display:inline; padding: 10 px}
   
 </style>
 <div style="background-color:#2f65b2; color: #ffffff">
