--- a/nav.html
+++ b/nav.html
@@ -6,9 +6,9 @@
 <div style="background-color:#2f65b2; color: #ffffff">
  <nav>
   <ul class="nav-li">
-   <li>Chi sono</li>
-   <li>Portfolio</li>
-   <li>Contattami</li>
+   <li class="nav-li">Chi sono</li>
+   <li class="nav-li">Portfolio</li>
+   <li class="nav-li">Contattami</li>
   </ul>
   </nav>
  </div>
