--- a/nav.html
+++ b/nav.html
@@ -1,14 +1,14 @@
 <style>
- ul.nav-li{list-style: none;}
+ ul.nav-li{list-style: none;display:inline}
  il.nav-li{display:inline; padding: 10 px}
   
 </style>
 <div style="background-color:#2f65b2; color: #ffffff">
  <nav>
   <ul class="nav-li">
-   <li class="nav-li">Chi sono</li>
-   <li class="nav-li">Portfolio</li>
-   <li class="nav-li">Contattami</li>
+   <li>Chi sono</li>
+   <li>Portfolio</li>
+   <li>Contattami</li>
   </ul>
   </nav>
  </div>
