--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,8 @@
 <style>
- .nav-li{list-style: none;display:inline; padding: 10 px}
+ .nav-li{list-style: none;display:inline; padding: 20 px; font-size: 16 px; font-family:poppins}
   
 </style>
-<div style="background-color:#2f65b2; color: #ffffff">
+<div style="background-color:#2f65b2; color: #ffffff;text-align:center;margin:auto">
  <nav>
   <ul class="nav-li">
    <li class="nav-li">Chi sono</li>
