--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <style>
- .nav-li{list-style: none;display:inline; padding: 20px; font-size: 16px; font-family:poppins}
+ .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; }
   
 </style>
 <div style="background-color:#2f65b2; color: #ffffff;text-align:center;margin:auto">
