--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,9 @@
 <style>
- .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; }
+ .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase;color: #ffffff; }
+  .nav-li-selected{list-style:none; display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff }
   
 </style>
-<div style="background-color:#2f65b2; color: #ffffff;text-align:center;margin:auto">
+<div style="background-color:#2f65b2;text-align:center;margin:auto">
  <nav>
   <ul class="nav-li">
    <li class="nav-li">Chi sono</li>
