--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,7 @@
 <div style="background-color:#2f65b2;text-align:center;margin:auto">
  <nav>
   <ul class="nav-li">
-   <li class="nav-li">Chi sono</li>
+   <li class="nav-li-selected">Chi sono</li>
    <li class="nav-li">Portfolio</li>
    <li class="nav-li">Contattami</li>
   </ul>
