--- a/chi_sono.html
+++ b/chi_sono.html
@@ -1,6 +1,19 @@
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <style>
+ .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase;color: #ffffff; }
+  .nav-li-selected{list-style:none; display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff}
+</style>
+<div style="background-color:#2f65b2;text-align:center;margin:auto">
+ <nav>
+  <ul class="nav-li">
+   <li class="nav-li-selected">Chi sono</li>
+   <li class="nav-li">Portfolio</li>
+   <li class="nav-li">Contattami</li>
+  </ul>
+  </nav>
+ </div>
 </header>
 
 <body class="sfondo">
