--- a/chi_sono.html
+++ b/chi_sono.html
@@ -4,8 +4,11 @@
   <style>
  .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase;color: #ffffff; }
   .nav-li-selected{list-style:none; display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff}
+  
+    
+    @media screen and (min width: 700px) { .computer-nav{display:none}}
 </style>
-<div style="background-color:#2f65b2;text-align:center;margin:auto">
+<div  class=" computer-nav" style="background-color:#2f65b2;text-align:center;margin:auto">
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
