--- a/chi_sono.html
+++ b/chi_sono.html
@@ -6,7 +6,7 @@
   .nav-li-selected{list-style:none; display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff}
   
     
-    @media screen and (min width: 700px) { .computer-nav{display:none}}
+    @media screen and (min width: 700px) { .computer-nav{display:none;visibility: hidden;}}
 </style>
 <div  class=" computer-nav" style="background-color:#2f65b2;text-align:center;margin:auto">
  <nav>
