--- a/chi_sono.html
+++ b/chi_sono.html
@@ -7,7 +7,7 @@
 
     @media screen and (max width: 700px) { .computer-nav{display:none;visibility: hidden;}}
 </style>
-<div  class="computer-nav" style="background-color:#2f65b2;text-align:center;margin:auto">
+<div  class="computer-nav" style="background-color:#2f65b2;text-align:center;margin:auto; padding:30px">
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
