--- a/chi_sono.html
+++ b/chi_sono.html
@@ -3,11 +3,16 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <style>
  .nav-li{list-style: none;display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase;color: #ffffff; }
-  .nav-li-selected{list-style:none; display:inline; padding: 30px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff}
+  .nav-li-selected{list-style:none; display:inline; padding:27px; font-size: 16px; font-family:poppins; text-transform:uppercase; color:#2f65b2; background-color:#ffffff}
+    
+    .computer-nav{background-color:#2f65b2;
+      text-align:center;
+      margin-top:0; 
+      padding:30px}
 
     @media screen and (max width: 700px) { .computer-nav{display:none;visibility: hidden;}}
 </style>
-<div  class="computer-nav" style="background-color:#2f65b2;text-align:center;margin:auto; padding:30px">
+<div  class="computer-nav" style="">
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
