--- a/chi_sono.html
+++ b/chi_sono.html
@@ -7,12 +7,12 @@
     
     .computer-nav{background-color:#2f65b2;
       text-align:center;
-      margin-top:0; 
-      padding:30px}
+      margin-top:-10px; 
+      padding:25px}
 
     @media screen and (max width: 700px) { .computer-nav{display:none;visibility: hidden;}}
 </style>
-<div  class="computer-nav" style="">
+<div  class="computer-nav">
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
