--- a/chi_sono.html
+++ b/chi_sono.html
@@ -7,7 +7,7 @@
     
     .computer-nav{background-color:#2f65b2;
       text-align:center;
-      margin-top:-10px; 
+      margin:-10px; 
       padding:25px}
 
     @media screen and (max width: 700px) { .computer-nav{display:none;visibility: hidden;}}
