--- a/chi_sono.html
+++ b/chi_sono.html
@@ -10,7 +10,7 @@
       margin:-10px; 
       padding:25px}
 
-    @media screen and (max width: 700px) { .computer-nav{display:none;visibility: hidden;}}
+    @media screen and (min-width: 700px) { .computer-nav{display:none;visibility: hidden;}}
 </style>
 <div  class="computer-nav">
  <nav>
