--- a/chi_sono.html
+++ b/chi_sono.html
@@ -33,13 +33,16 @@
                     visibility: hidden;
       }
     }
+    
+    .nav-link{color:#fffff;
+              text-decoration: none}
 </style>
 
   <div  class="computer-nav">
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
-   <li class="nav-li">Portfolio</li>
+   <li class="nav-li"><a class="nav-link" hfer="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</li>
    <li class="nav-li">Contattami</li>
   </ul>
   </nav>
