--- a/chi_sono.html
+++ b/chi_sono.html
@@ -42,7 +42,7 @@
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
-   <li class="nav-li"><a class="nav-link" hfer="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</li>
+   <li class="nav-li"><a class="nav-link" href="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</li>
    <li class="nav-li">Contattami</li>
   </ul>
   </nav>
