--- a/chi_sono.html
+++ b/chi_sono.html
@@ -36,6 +36,8 @@
     
     .nav-link{color:#fffff;
               text-decoration: none}
+    .nav-link:hover{color:#fffff;
+              text-decoration: none}
 </style>
 
   <div  class="computer-nav">
