--- a/chi_sono.html
+++ b/chi_sono.html
@@ -34,9 +34,9 @@
       }
     }
     
-    .nav-link{color:#fffff;
+    a.nav-link{color:#fffff;
               text-decoration: none}
-    .nav-link:hover{color:#fffff;
+    a.nav-link:hover{color:#fffff;
               text-decoration: none}
 </style>
 
