--- a/chi_sono.html
+++ b/chi_sono.html
@@ -34,10 +34,11 @@
       }
     }
     
-    a.nav-link{color:#fffff;
+    a.nav-link:link{color:#fffff;
               text-decoration: none}
     a.nav-link:hover{color:#fffff;
               text-decoration: none}
+    
 </style>
 
   <div  class="computer-nav">
