--- a/chi_sono.html
+++ b/chi_sono.html
@@ -3,8 +3,8 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <style>
         .nav-li{
-            list-style: 
-            none;display:inline; 
+            list-style:none;
+            display:inline; 
             padding: 30px; 
             font-size: 16px; 
             font-family:poppins; 
@@ -34,9 +34,9 @@
       }
     }
     
-    a.nav-link:link{color:#fffff;
+    a.nav:link{color:#ffffff;
               text-decoration: none}
-    a.nav-link:hover{color:#fffff;
+    a.nav:hover{color:#ffffff;
               text-decoration: none}
     
 </style>
@@ -45,7 +45,7 @@
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
-   <li class="nav-li"><a class="nav-link" href="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</a></li>
+   <li class="nav-li"><a class="nav" href="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</a></li>
    <li class="nav-li">Contattami</li>
   </ul>
   </nav>
