--- a/chi_sono.html
+++ b/chi_sono.html
@@ -38,6 +38,8 @@
               text-decoration: none}
     a.nav:hover{color:#ffffff;
               text-decoration: none}
+    a.nav:visited{color:#ffffff;
+              text-decoration: none}
     
 </style>
 
