--- a/chi_sono.html
+++ b/chi_sono.html
@@ -35,7 +35,8 @@
     }
     
     a.nav:link{color:#ffffff;
-              text-decoration: none}
+              text-decoration: none; 
+              font-size: 16px;}
     a.nav:hover{color:#ffffff;
               text-decoration: none}
     a.nav:visited{color:#ffffff;
