--- a/contattami.html
+++ b/contattami.html
@@ -6,8 +6,8 @@
  <nav>
   <ul class="nav-li">
    <li class="nav-li">Chi sono</li>
-   <li class="nav-li-selected"><a class="nav" href="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</a></li>
-   <li class="nav-li">Contattami</li>
+   <li class="nav-li"><a class="nav" href="https://it.wikipedia.org/wiki/Pagina_principale">Portfolio</a></li>
+   <li class="nav-li-selected">Contattami</li>
   </ul>
   </nav>
  </div>
