--- a/contattami.html
+++ b/contattami.html
@@ -16,7 +16,7 @@
 <body class="sfondo">
   <h1>Felice tu abbia deciso di conttattarmi!</h1>
   <div style="max-width: 700px; text-align:center;margin:auto">
-  <p>La mia e-mail è <a href="mailto:rachele.e.pilia@protonmail.com">rachele.e.pilia@protonmail.com</a></p>
-  <p>Oppure vieni a trovarmi sulla mia <a href="https://www.linkedin.com/in/rachele-e-pilia/">pagina Linkedin</a>
+  <p>La mia e-mail è <br/><a href="mailto:rachele.e.pilia@protonmail.com">rachele.e.pilia@protonmail.com</a></p>
+  <p>Oppure vieni a trovarmi sulla mia<br/><a href="https://www.linkedin.com/in/rachele-e-pilia/">pagina Linkedin</a>
                                                                                              </div>
 </body>
