--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Chi sono</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Portfolio</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Social</a></h2>
-<h2><a href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/contattami.html">Contattami</a></h2></div>
+<h2><a href="https://githubusercontent.com/AlcibiadeR/portfolio/main/contattami.html">Contattami</a></h2></div>
   </body>
   
 
