--- a/contattami.html
+++ b/contattami.html
@@ -1,3 +1,5 @@
+<!DOCTYPE>
+<html>
 <header>
   <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/style.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -20,3 +22,5 @@
   <p>Oppure vieni a trovarmi sulla mia<br/><a href="https://www.linkedin.com/in/rachele-e-pilia/">pagina Linkedin</a>
                                                                                              </div>
 </body>
+ </html>
+</DOCTYPE>
