--- a/chi_sono.html
+++ b/chi_sono.html
@@ -6,8 +6,8 @@
  <nav>
   <ul class="nav-li">
    <li class="nav-li-selected">Chi sono</li>
-   <li class="nav-li"><a class="nav" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/contattami.html">Portfolio</a></li>
-   <li class="nav-li"><a class="nav" href="https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/contattami.html">Contattami</a></li>
+   <li class="nav-li"><a class="nav" href="./contattami.html">Portfolio</a></li>
+   <li class="nav-li"><a class="nav" href="./contattami.html">Contattami</a></li>
   </ul>
   </nav>
  </div>
