--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
 <h1>Portfolio<br/><span style="font-size:20px">Rachele Elena Pilia</h1>
 
-<h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Chi sono</a></h2>
+<h2><a href=./chi_sono>Chi sono</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Portfolio</a></h2>
 <h2><a href=https://it.wikipedia.org/wiki/Pagina_principale>Social</a></h2>
 <h2><a href="./contattami.html">Contattami</a></h2></div>
