--- a/contattami.html
+++ b/contattami.html
@@ -13,6 +13,14 @@
   </ul>
   </nav>
  </div>
+    
+  
+  <nav class="mobile-nav">
+    <div class="mobile">
+    </nav>
+  <style>
+    @media screen and (max-width: 700px){.mobile-nav}
+  </style>
 </header>
 
 <body class="sfondo">
