--- a/contattami.html
+++ b/contattami.html
@@ -17,9 +17,13 @@
   
   <nav class="mobile-nav">
     <div class="mobile">
+     <div>
     </nav>
   <style>
-    @media screen and (max-width: 700px){.mobile-nav}
+    @media screen and (max-width: 700px){.mobile-nav {display:block}}
+    }
+    .mobile-nav{display:none}
+    .mobile{background-color:}
   </style>
 </header>
 
