--- a/contattami.html
+++ b/contattami.html
@@ -17,13 +17,17 @@
   
   <nav class="mobile-nav">
     <div class="mobile">
+      <ul class="va-li"><a class="nav" href="./chi_sono.html">Chi sono</a></li>
+      <ul>
      <div>
     </nav>
-  <style>
+  
+        <style>
     @media screen and (max-width: 700px){.mobile-nav {display:block}}
     }
     .mobile-nav{display:none}
-    .mobile{background-color:}
+    .mobile{background-color:#2f65b2;
+                  padding:20px}
   </style>
 </header>
 
