--- a/contattami.html
+++ b/contattami.html
@@ -25,7 +25,7 @@
         <style>
     @media screen and (max-width: 700px){.mobile-nav {display:block}}
     }
-    .mobile-nav{display:none}
+    .mobile{display:none}
     .mobile{background-color:#2f65b2;
                   padding:20px}
   </style>
