--- a/contattami.html
+++ b/contattami.html
@@ -23,10 +23,9 @@
     </nav>
   
         <style>
-    @media screen and (max-width: 700px){.mobile-nav {display:block}}
+    @media screen and (min-width: 700px){.mobile-nav {display:block}}
     }
-    .mobile{display:none}
-    .mobile{background-color:#2f65b2;
+    .mobile{display:none; background-color:#2f65b2;
                   padding:20px}
   </style>
 </header>
