--- a/contattami.html
+++ b/contattami.html
@@ -17,7 +17,7 @@
   
   <nav class="mobile-nav">
     <div class="mobile">
-      <ul class="va-li"><a class="nav" href="./chi_sono.html">Chi sono</a></li>
+      <ul class="mobile-nav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      <div>
     </nav>
