--- a/contattami.html
+++ b/contattami.html
@@ -19,7 +19,7 @@
     <div class="mobile">
       <ul class="mobile-nav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
-     <div>
+     </div>
     </nav>
   
         <style>
