--- a/contattami.html
+++ b/contattami.html
@@ -27,6 +27,7 @@
     }
     .mobile{display:none; background-color:#2f65b2;
                   padding:20px}
+          .mobile-nav{display:none}
   </style>
 </header>
 
