--- a/contattami.html
+++ b/contattami.html
@@ -28,7 +28,14 @@
     .mobile{display:none; background-color:#2f65b2;
                   padding:20px}
           .mobile-nav{display:none}
+          .mobile-icon:hover .mobile{display:block}
   </style>
+      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right>
+      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right>
+        <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right>
+      </div>
+      </div>
+                                      </div>
 </header>
 
 <body class="sfondo">
