--- a/contattami.html
+++ b/contattami.html
@@ -30,9 +30,9 @@
           .mobile-nav{display:none}
           .mobile-icon:hover .mobile{display:block}
   </style>
-      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right">
-      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right">
-        <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right">
+      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right; padding-bottom:10px">
+      <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right; padding-bottom:10px">
+        <div class="mobile-icon" style="border-bottom: 1px solid; width:20px; flat: right;padding-bottom:10px">
       </div>
       </div>
                                       </div>
