--- a/contattami.html
+++ b/contattami.html
@@ -14,28 +14,28 @@
   </nav>
  </div>
     
+ 
   
-  <nav class="mobile-nav">
+        <style>
+    @media screen and (min-width: 700px){.mobile-nav {display:block}}
+    }
+    .mobile{background-color:#2f65b2;
+                  padding:20px}
+          .mobile-nav{display:none}
+          .mobile-icon:hover .mobile{display:block}
+  </style>
+      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+        <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
+      </div>
+      </div>
+                                      </div>
+    <nav class="mobile-nav">
     <div class="mobile">
       <ul class="mobile-nav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      </div>
     </nav>
-  
-        <style>
-    @media screen and (min-width: 700px){.mobile-nav {display:block}}
-    }
-    .mobile{display:none; background-color:#2f65b2;
-                  padding:20px}
-          .mobile-nav{display:none}
-          .mobile-icon:hover .mobile{display:block}
-  </style>
-      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; flat: right; padding-bottom:5px">
-      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; flat: right; padding-bottom:5px">
-        <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; flat: right;padding-bottom:5px">
-      </div>
-      </div>
-                                      </div>
 </header>
 
 <body class="sfondo">
