--- a/contattami.html
+++ b/contattami.html
@@ -22,11 +22,11 @@
     .mobile{background-color:#2f65b2;
                   padding:20px}
           .mobile-nav{display:none}
-          .mobile-icon:hover .mobile{display:block}
+          .mobile-icon:hover .mobile-nav{display:block}
   </style>
       <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-        <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
+      <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
       </div>
       </div>
                                       </div>
