--- a/contattami.html
+++ b/contattami.html
@@ -17,7 +17,7 @@
  
   
         <style>
-    @media screen and (min-width: 700px){.mobile-nav {display:block}}
+    @media screen and (min-width: 700px){.mobile-icon {display:block}}
     }
     .mobile{background-color:#2f65b2;
                   padding:20px}
