--- a/contattami.html
+++ b/contattami.html
@@ -17,22 +17,22 @@
  
   
         <style>
-    @media screen and (min-width: 700px){.mobile-icon {display:block}}
+    @media screen and (max-width: 700px){.mobile-icon {display:block}}
     }
     .mobile{background-color:#2f65b2;
                   padding:20px}
-          .mobile-nav{display:none}
-          .mobile-icon:hover .mobile-nav{display:block}
+          .mobilenav{display:none}
+          .mobileicon:hover .mobilenav{display:block}
   </style>
-      <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+      <div class="mobileicon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
       <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
         <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
       </div>
       </div>
                                       </div>
-    <nav class="mobile-nav">
+    <nav class="mobilenav">
     <div class="mobile">
-      <ul class="mobile-nav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
+      <ul class="mobilenav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      </div>
     </nav>
