--- a/contattami.html
+++ b/contattami.html
@@ -21,7 +21,7 @@
     }
     .mobile{background-color:#2f65b2;
                   padding:20px}
-          .mobilenav{display:none}
+          .mobilenav{}
           .mobileicon:hover .mobilenav{display:block}
   </style>
       <div class="mobileicon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
