--- a/contattami.html
+++ b/contattami.html
@@ -30,12 +30,11 @@
       </div>
       </div>
                                       </div>
-    <nav class="mobilenav">
-    <div class="mobile">
-      <ul class="mobilenav"><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
+    <div class="mobilenav">
+      <ul><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      </div>
-    </nav>
+
 </header>
 
 <body class="sfondo">
