--- a/contattami.html
+++ b/contattami.html
@@ -21,7 +21,7 @@
     }
     .mobile{background-color:#2f65b2;
                   padding:20px}
-          .mobilenav{diplay:none}
+          .mobilenav{display:none}
           .mobileicon:hover .mobilenav{display:block}
   </style>
       <div class="mobileicon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
@@ -31,7 +31,7 @@
       </div>
                                       </div>
     <div class="mobilenav">
-      <ul><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
+      <ul class><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      </div>
 
