--- a/contattami.html
+++ b/contattami.html
@@ -22,15 +22,15 @@
     .mobile{background-color:#2f65b2;
                   padding:20px}
           .mobilenav{display:none;position:absolute; z-index:1}
-          .mobileicon:hover .mobilenav{display:block}
+          .mobile-icon:hover .mobile-nav{display: block;}
   </style>
-      <div class="mobileicon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+ <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
       <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
         <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
       </div>
       </div>
-                                      </div>
-    <div class="mobilenav">
+ </div>
+    <div class="mobile-nav">
       <ul class><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
       <ul>
      </div>
