--- a/contattami.html
+++ b/contattami.html
@@ -21,7 +21,7 @@
     }
     .mobile{background-color:#2f65b2;
                   padding:20px}
-          .mobilenav{display:none;position:absolute; z-index:1}
+          .mobile-nav{display:none;position:absolute; z-index:1}
           .mobile-icon:hover .mobile-nav{display: block;}
   </style>
  <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
