--- a/contattami.html
+++ b/contattami.html
@@ -17,27 +17,9 @@
  
   
         <style>
-    @media screen and (min-width: 700px){.mobileicon {display:none}}
+    @media screen and (min-width: 700px){.dropdown {display:none}}
     }
-    .mobile{background-color:#2f65b2;
-                  padding:20px}
-          .mobile-nav{display:none;position:absolute; z-index:1}
-          .mobile-icon:hover .mobile-nav{display: block;}
-  </style>
- <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-      <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
-      </div>
-      </div>
- </div>
-    <div class="mobile-nav">
-      <ul class><li><a class="nav" href="./chi_sono.html">Chi sono</a></li>
-      <ul>
-     </div>
-        <!DOCTYPE html>
-<html>
-<head>
-<style>
+          
 .dropdown {
   position: relative;
   display: inline-block;
@@ -57,6 +39,13 @@
   display: block;
 }
 </style>
+
+ <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+      <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
+      </div>
+      </div>
+ </div>
 </head>
 <body>
 
