--- a/contattami.html
+++ b/contattami.html
@@ -49,14 +49,13 @@
 </head>
 <body>
 
-<h2>Hoverable Dropdown</h2>
-<p>Move the mouse over the text below to open the dropdown content.</p>
-
-<div class="dropdown">
+<div class="dropdown"style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
   <span>Mouse over me</span>
   <div class="dropdown-content">
-  <p>Hello World!</p>
-  </div>
+    <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
+        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
+      </div>
+    </div>
 </div>
 
 </body>
