--- a/contattami.html
+++ b/contattami.html
@@ -49,19 +49,13 @@
 </head>
 <body>
 
-<div class="dropdown"style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-  <span>Mouse over me</span>
-  <div class="dropdown-content">
+<div class="dropdown" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
     <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
         <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
       </div>
     </div>
 </div>
-
-</body>
-</html>
-
-
+  <div class="dropdown-content"><ul><li>Ciao</li></ul></div>
 
 
 </header>
