--- a/contattami.html
+++ b/contattami.html
@@ -17,11 +17,11 @@
  
   
         <style>
-    @media screen and (min-width: 700px){.dropdown {display:none}}
+    @media screen and (max-width: 700px){.dropdown {display:none}}
     }
           
 .dropdown {
-  position: relative;
+  position: fixed;
   display: inline-block;
 }
 
@@ -39,15 +39,6 @@
   display: block;
 }
 </style>
-
- <div class="mobile-icon" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-      <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
-      </div>
-      </div>
- </div>
-</head>
-<body>
 
 <div class="dropdown" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
     <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
