--- a/contattami.html
+++ b/contattami.html
@@ -17,7 +17,7 @@
  
   
         <style>
-    @media screen and (max-width: 700px){.dropdown {display:none}}
+    @media screen and (min-width: 700px){.dropdown {display:none}}
     }
           
 .dropdown {
@@ -46,7 +46,7 @@
       </div>
     </div>
 </div>
-  <div class="dropdown-content"><ul><li>Ciao</li></ul></div>
+  <div class="dropdown-content">Ciao</div>
 
 
 </header>
