--- a/contattami.html
+++ b/contattami.html
@@ -17,7 +17,7 @@
  
   
         <style>
-    @media screen and (min-width: 700px){.dropdown {display:none}}
+    /*@media screen and (min-width: 700px){.dropdown {display:none}}*/
     }
           
 .dropdown {
