--- a/contattami.html
+++ b/contattami.html
@@ -40,11 +40,8 @@
 }
 </style>
 
-<div class="dropdown" style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-    <div  style="border-bottom: 4px solid; width:20px; float: right; padding-bottom:5px">
-        <div style="border-bottom: 4px solid; width:20px; float: right;padding-bottom:5px">
-      </div>
-    </div>
+<div class="dropdown">
+  <p>Menu</p>
 </div>
   <div class="dropdown-content">Ciao</div>
 
